--- a/extension.css
+++ b/extension.css
@@ -8,8 +8,8 @@
 
 .smile-content img[role="presentation"]
 {
-	max-height: 50px;
-	max-width: 50px;
+	max-height: 28px;
+	max-width: 28px;
 	white-space: unset!important;
 }
 
@@ -18,7 +18,7 @@
 	padding-bottom: 0px!important;
 }
 
-setting
+fullpage
 {
 	display: none;
 	flex-direction: column;
@@ -26,7 +26,6 @@ setting
 	justify-content: center;
 	
 	position: fixed;
-	z-index: 10000;
 	
 	width: 100%;
 	height: 100%;
@@ -38,10 +37,14 @@ setting
 	transition: all .4s;
 }
 
+fullpage
+{ z-index: 10000; }
+
+
 backfon
 {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	
 	position: fixed;
 	z-index: 10001;
@@ -49,23 +52,31 @@ backfon
 	background: rgba(0, 0, 0, .7);
 }
 
-backfon.loadfrom, backfon.saveto
+backfon.loadfrom, backfon.saveto, backfon.asett
 {
 	display: none;
 	z-index: 10003;
 }
 
-setting *
+backfon.alert
+{
+	display: none;
+	z-index: 10005;
+}
+
+fullpage *
 {
 	display: flex;
 }
 
-setting.open, loadfrom.open, saveto.open, backfon.open
+fullpage.open, smiles.open,
+loadfrom.open, saveto.open, 
+alert.open, asett.open, backfon.open
 {
 	display: flex;
 }
 
-smiles, loadfrom, saveto
+smiles, loadfrom, saveto, asett, alert
 {
 	position: absolute;
 	
@@ -79,10 +90,11 @@ smiles, loadfrom, saveto
 	flex-direction: column;
 }
 
-smiles { z-index: 10002; }
-loadfrom, saveto { display: none; z-index: 10004; }
+smiles { display: none; z-index: 10002; }
+loadfrom, saveto, asett { display: none; z-index: 10004; }
+alert { display: none; z-index: 10006; }
 
-setting top
+fullpage top
 {
 	background: #2b2c32;
 	border-radius: 3px;
@@ -90,9 +102,18 @@ setting top
 	margin: 6px;
 	padding: 10px;
 	font-size: 16px;
+	
+	justify-content: space-between;
+	align-items: center;
 }
 
-setting middle
+fullpage close
+{
+	border-radius: 3px;
+	background: #121215;
+}
+
+fullpage middle
 {
 	height: 100%;
 	flex-direction: column;
@@ -100,16 +121,53 @@ setting middle
 	padding: 10px 16px;
 }
 
-setting bottom
+@media (max-width: 600px)
+{
+	smiles, loadfrom, saveto, asett
+	{
+		width: 100%;
+		height: 100%;
+	}
+	
+	alert
+	{
+		width: 100%;
+	}
+	
+	fullpage middle
+	{
+		overflow: auto;
+	}
+}
+
+fullpage pages
+{
+	height: 100%;	
+	padding: 10px 16px;
+	justify-content: flex-start;
+	flex-flow: row wrap;
+}
+
+pages page
+{
+	padding: 0px 9px;
+	margin: 3px;
+	border-radius: 3px;
+	background: #2b2c32;
+	justify-content: center;
+	align-items: center;
+}
+
+fullpage bottom
 {
 	flex-direction: row;
 	padding: 0px 16px 10px;
-	justify-content: flex-end;
+	justify-content: space-between;
 }
 
-setting bottom > *
+fullpage bottom left > *
 {
-	margin-left: 6px;
+	margin-right: 6px;
 }
 
 finder
@@ -118,13 +176,13 @@ finder
 	margin-bottom: 6px;
 }
 
-setting input[name='name']
+fullpage input[name='name']
 {
 	width: 100px!important;
 }
 
 /* Перекрываем стили как можем ей богу */
-setting input, setting textarea
+fullpage input, fullpage textarea
 {
 	margin: 0 5px 0 0!important; /* Особенно это */
 	height: 29px!important;
@@ -135,7 +193,7 @@ setting input, setting textarea
 	color: #989899!important;
 }
 
-setting textarea
+fullpage textarea
 { height: 450px!important; }
 
 fing
