--- a/extension.css
+++ b/extension.css
@@ -20,7 +20,7 @@
 
 fullpage
 {
-	display: none;
+	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -33,8 +33,10 @@ fullpage
 	top: 0;
 	
 	color: #fff;
+	transition: opacity .3s;
 	
-	transition: all .4s;
+	opacity: 0;
+	margin-top: -1000%;
 }
 
 fullpage
@@ -50,17 +52,20 @@ backfon
 	z-index: 10001;
 	
 	background: rgba(0, 0, 0, .7);
+	transition: opacity .3s;
+	
+	opacity: 0;
 }
 
-backfon.loadfrom, backfon.saveto, backfon.asett
+backfon.loadfrom, backfon.saveto, backfon.asett, backfon.chan
 {
-	display: none;
+	margin-top: -1000%;
 	z-index: 10003;
 }
 
 backfon.alert
 {
-	display: none;
+	margin-top: -1000%;
 	z-index: 10005;
 }
 
@@ -71,12 +76,21 @@ fullpage *
 
 fullpage.open, smiles.open,
 loadfrom.open, saveto.open, 
-alert.open, asett.open, backfon.open
+alert.open, asett.open, backfon.open,
+chan.open
 {
-	display: flex;
+	opacity: 1;
 }
 
-smiles, loadfrom, saveto, asett, alert
+fullpage.margin, smiles.margin,
+loadfrom.margin, saveto.margin, 
+alert.margin, asett.margin, backfon.margin,
+chan.margin
+{
+	margin-top: 0;
+}
+
+smiles, loadfrom, saveto, asett, alert, chan
 {
 	position: absolute;
 	
@@ -88,11 +102,14 @@ smiles, loadfrom, saveto, asett, alert
 	background: #121215;
 	
 	flex-direction: column;
+	transition: opacity .3s;
+	
+	opacity: 0;
 }
 
-smiles { display: none; z-index: 10002; }
-loadfrom, saveto, asett { display: none; z-index: 10004; }
-alert { display: none; z-index: 10006; }
+smiles { margin-top: -1000%; z-index: 10002; }
+loadfrom, saveto, asett, chan { margin-top: -1000%; z-index: 10004; }
+alert { margin-top: -1000%; z-index: 10006; }
 
 fullpage top
 {
@@ -123,7 +140,7 @@ fullpage middle
 
 @media (max-width: 600px)
 {
-	smiles, loadfrom, saveto, asett
+	smiles, loadfrom, saveto, asett, chan
 	{
 		width: 100%;
 		height: 100%;
@@ -214,6 +231,11 @@ fing:hover
 	background-color: #343434!important;
 }
 
+fullpage smile-settings
+{
+	display: none;
+}
+
 smile-list
 {
 	flex-direction: column;
@@ -224,6 +246,15 @@ smile-list
 smile-list list
 {
 	margin: 3px 0;
+	transition: all .4s;
+	opacity: 0;
+	max-height: 0px;
+}
+
+smile-list list.created
+{
+	opacity: 1;
+	max-height: 100px;
 }
 
 smile-list list img
@@ -277,4 +308,63 @@ list red, list del
 list red:hover, list del:hover
 {
 	background-color: #343434!important;
+}
+
+chan middle 
+{
+	align-items: center;
+}
+
+chan canedit
+{
+	width: 100%;
+	justify-content: center;
+    padding: 5px;
+    margin: 6px 0;
+    border-radius: 3px;
+	background: radial-gradient(circle, rgba(0,101,22,1) 0%, rgba(0,0,0,0) 100%);
+	
+	cursor: pointer;
+	
+	transition: background .3s;
+}
+
+chan canedit.false
+{
+    background: radial-gradient(circle, rgba(101,0,0,1) 0%, rgba(0,0,0,0) 100%);
+}
+
+chan helper
+{
+	text-align: center;
+}
+
+chan canedit.false ~ finder
+{ max-height: 0px }
+
+chan finder
+{
+	max-height: 100px;
+	width: 100%;
+	overflow: hidden;
+	
+	transition: all .3s;
+}
+
+chan input
+{
+	width: 50%!important;
+	border: none!important;
+}
+
+chan finder input:first-child
+{
+	text-align: right;
+	background:  linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%)!important;
+}
+
+chan finder input:last-child
+{
+	margin: 0!important;
+	background:  linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%)!important;
 }
