--- a/extension.css
+++ b/extension.css
@@ -57,13 +57,14 @@ backfon
 	opacity: 0;
 }
 
-backfon.loadfrom, backfon.saveto, backfon.asett, backfon.chan
+backfon.loadfrom, backfon.saveto,
+backfon.asett, backfon.chan
 {
 	margin-top: -1000%;
 	z-index: 10003;
 }
 
-backfon.alert
+backfon.alert, backfon.savetouser
 {
 	margin-top: -1000%;
 	z-index: 10005;
@@ -75,7 +76,7 @@ fullpage *
 }
 
 fullpage.open, smiles.open,
-loadfrom.open, saveto.open, 
+loadfrom.open, saveto.open, savetouser.open,
 alert.open, asett.open, backfon.open,
 chan.open
 {
@@ -83,14 +84,14 @@ chan.open
 }
 
 fullpage.margin, smiles.margin,
-loadfrom.margin, saveto.margin, 
+loadfrom.margin, saveto.margin, savetouser.margin,
 alert.margin, asett.margin, backfon.margin,
 chan.margin
 {
 	margin-top: 0;
 }
 
-smiles, loadfrom, saveto, asett, alert, chan
+smiles, loadfrom, saveto, savetouser, asett, alert, chan
 {
 	position: absolute;
 	
@@ -109,7 +110,7 @@ smiles, loadfrom, saveto, asett, alert, chan
 
 smiles { margin-top: -1000%; z-index: 10002; }
 loadfrom, saveto, asett, chan { margin-top: -1000%; z-index: 10004; }
-alert { margin-top: -1000%; z-index: 10006; }
+alert, savetouser { margin-top: -1000%; z-index: 10006; }
 
 fullpage top
 {
@@ -146,7 +147,7 @@ fullpage middle
 		height: 100%;
 	}
 	
-	alert
+	alert, savetouser
 	{
 		width: 100%;
 	}
@@ -155,18 +156,23 @@ fullpage middle
 	{
 		overflow: auto;
 	}
+	
+	pages page
+	{
+		width: 100%!important;
+	}
 }
 
 fullpage pages
 {
-	height: 100%;	
 	padding: 10px 16px;
-	justify-content: flex-start;
+	justify-content: space-between;
 	flex-flow: row wrap;
 }
 
 pages page
 {
+	width: 40%;
 	padding: 0px 9px;
 	margin: 3px;
 	border-radius: 3px;
@@ -190,7 +196,13 @@ fullpage bottom left > *
 finder
 {
 	flex-direction: row;
+	align-items: center;
 	margin-bottom: 6px;
+}
+
+saveto finder
+{
+	justify-content: space-between;
 }
 
 fullpage input[name='name']
@@ -199,7 +211,7 @@ fullpage input[name='name']
 }
 
 /* Перекрываем стили как можем ей богу */
-fullpage input, fullpage textarea
+fullpage input:not([name="withoutfone"]), fullpage textarea
 {
 	margin: 0 5px 0 0!important; /* Особенно это */
 	height: 29px!important;
@@ -210,8 +222,31 @@ fullpage input, fullpage textarea
 	color: #989899!important;
 }
 
+fullpage input[name="withoutfone"]
+{
+	margin: 5px!important;
+	border: none!important;
+	outline: none!important;
+	color: #eee!important;
+	background: none!important;
+	height: 29px!important;
+	border-radius: 3px;
+	
+	transition: all .3s;
+}
+
+
+fullpage input[name="withoutfone"]:focus
+{
+    background: #121215!important;
+}
+
 fullpage textarea
-{ height: 450px!important; }
+{
+	height: 200px!important;
+	max-height: 200px;
+    word-break: break-all;
+}
 
 fing
 {
@@ -234,6 +269,45 @@ fing:hover
 fullpage smile-settings
 {
 	display: none;
+}
+
+information img
+{
+	width: 128px;
+}
+
+fullpage pass
+{
+	width: 100%;
+    padding-left: 6px;
+    flex-direction: column;
+	
+	justify-content: center;
+}
+
+fullpage pass > *
+{
+	align-items: center;
+}
+
+fullpage pass t
+{
+	padding: 3px 9px;
+	border-radius: 3px;
+	margin: 3px 6px 3px 0;
+	background: #2b2c32;
+}
+
+fullpage pass confirmation
+{
+	padding: 3px;
+	margin: 3px 6px 3px 0;
+}
+
+fullpage pass fing
+{
+	width: 120px;
+	justify-content: center;
 }
 
 smile-list
