--- a/extens.css
+++ b/extens.css
@@ -1,5 +1,11 @@
 /* Стили */
 
+:root
+{
+    --top-color: #2b2c32;
+    --hover-top-color: #514f4f;
+}
+
 .smile-content
 {
 	display: inline-block!important;
@@ -20,7 +26,12 @@
 
 .node .content-info
 {
-	overflow: inherit!important;
+	overflow: hidden;
+}
+
+.content-list .content-list .node .content-info
+{
+	overflow: visible!important;
 }
 
 fullpage
@@ -44,8 +55,7 @@ fullpage
 	margin-top: -1000%;
 }
 
-fullpage
-{ z-index: 10000; }
+fullpage { z-index: 10000; }
 
 
 backfon
@@ -54,7 +64,6 @@ backfon
 	height: 100%;
 	
 	position: fixed;
-	z-index: 10001;
 	
 	background: rgba(0, 0, 0, .7);
 	transition: opacity .3s;
@@ -62,42 +71,17 @@ backfon
 	opacity: 0;
 }
 
-backfon.loadfrom, backfon.saveto,
-backfon.asett, backfon.asettchat, backfon.chan
-{
-	margin-top: -1000%;
-	z-index: 10003;
-}
-
-backfon.alert, backfon.savetouser, backfon.wellcome,
-backfon.userstyles
-{
-	margin-top: -1000%;
-	z-index: 10005;
-}
+[backfirst] { margin-top: -1000%; z-index: 10001; }
+[backsecond] { margin-top: -1000%; z-index: 10003; }
+[backthird] { margin-top: -1000%; z-index: 10005; }
+[backlast] { margin-top: -1000%; z-index: 10099; }
 
 fullpage *
 {
 	display: flex;
 }
 
-fullpage.open, smiles.open,
-loadfrom.open, saveto.open, savetouser.open,
-alert.open, asett.open, asettchat.open, backfon.open,
-chan.open, wellcome.open, userstyles.open
-{
-	opacity: 1;
-}
-
-fullpage.margin, smiles.margin,
-loadfrom.margin, saveto.margin, savetouser.margin,
-alert.margin, asett.margin, asettchat.margin, backfon.margin,
-chan.margin, wellcome.margin, userstyles.margin
-{
-	margin-top: 0;
-}
-
-smiles, loadfrom, saveto, savetouser, asett, asettchat, alert, chan, wellcome, userstyles
+fullpage > *:not(backfon)
 {
 	position: absolute;
 	
@@ -114,13 +98,24 @@ smiles, loadfrom, saveto, savetouser, asett, asettchat, alert, chan, wellcome, u
 	opacity: 0;
 }
 
-smiles { margin-top: -1000%; z-index: 10002; }
-loadfrom, saveto, asett, asettchat, chan { margin-top: -1000%; z-index: 10004; }
-alert, savetouser, wellcome, userstyles { margin-top: -1000%; z-index: 10006; }
+fullpage.open, fullpage > *.open
+{
+	opacity: 1;
+}
+
+fullpage.margin, fullpage > *.margin
+{
+	margin-top: 0;
+}
+
+[first] { margin-top: -1000%; z-index: 10002; }
+[second] { margin-top: -1000%; z-index: 10004; }
+[third] { margin-top: -1000%; z-index: 10006; }
+[last] { margin-top: -1000%; z-index: 10100; }
 
 fullpage top
 {
-	background: #2b2c32;
+	background: var(--top-color);
 	border-radius: 3px;
 	
 	margin: 6px;
@@ -141,7 +136,7 @@ fullpage close, fullpage remove
 
 fullpage middle
 {
-	height: 100%;
+	height: auto;
 	flex-direction: column;
 	
 	padding: 10px 16px;
@@ -149,7 +144,7 @@ fullpage middle
 
 @media (max-width: 600px)
 {
-	smiles, loadfrom, saveto, asett, asettchat, chan, userstyles
+	smiles, changepassword, asett, asettchat, chan, userstyles
 	{
 		width: 100%;
 		height: 100%;
@@ -176,6 +171,7 @@ fullpage pages
 	padding: 10px 16px;
 	justify-content: space-between;
 	flex-flow: row wrap;
+    font-size: 12px;
 }
 
 pages page
@@ -185,20 +181,25 @@ pages page
 	padding: 0px 9px;
 	margin: 3px;
 	border-radius: 3px;
-	background: #2b2c32;
+	background: var(--top-color);
 	justify-content: center;
 	align-items: center;
+    font-size: 11px;
+}
+
+pages page[onclick]
+{
+    cursor: pointer;
+}
+
+pages page[onclick]:hover
+{
+    background: var(--hover-top-color);
 }
 
 pages page.fullstroke
 {
 	width: 100%;
-	padding: 0px 9px;
-	margin: 3px;
-	border-radius: 3px;
-	background: #2b2c32;
-	justify-content: center;
-	align-items: center;
 }
 
 .fullstroke gotcha
@@ -277,8 +278,15 @@ fing
     background-color: #000!important;
     padding: 0px 7px!important;
     border: 1px solid #343434!important;
-	
+	opacity: 1;
+    
 	cursor: pointer;
+    transition: all .3s;
+}
+
+fing[not-overflow]
+{
+    overflow: hidden;
 }
 
 fing:hover
@@ -316,7 +324,7 @@ fullpage pass t
 	padding: 3px 9px;
 	border-radius: 3px;
 	margin: 3px 6px 3px 0;
-	background: #2b2c32;
+	background: var(--top-color);
 }
 
 fullpage pass confirmation
@@ -334,6 +342,7 @@ fullpage pass fing
 smile-list
 {
 	flex-direction: column;
+    padding-right: 6px;
 	height: 100%;
 	overflow-y: scroll;
     overflow-x: hidden;
@@ -366,7 +375,7 @@ smile-list tab list:before
     width: 1px;
     height: 41px;
 	
-    background: #2b2c32;
+    background: var(--top-color);
     position: absolute;
 }
 
@@ -380,7 +389,7 @@ smile-list tab list:last-child:before
     width: 1px;
     height: 23px;
 	
-    background: #2b2c32;
+    background: var(--top-color);
     position: absolute;
 }
 
@@ -395,7 +404,7 @@ smile-list tab list:after
     width: 10px;
     height: 1px;
 	
-    background: #2b2c32;
+    background: var(--top-color);
     position: absolute;
 }
 
@@ -702,7 +711,140 @@ page p {
 {
     border: 1px solid #333;
     background: #3333;
+    
     color: #eee!important;
     line-height: 18px!important;
     font-size: 12px;
+}
+
+bottomhelper
+{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+    background: #1d1d1d;
+    padding: 3px;
+    
+    color: #eee;
+    font-size: 10px;
+    z-index: 10011;
+    opacity: 1;
+    
+    transition: all .3s;
+}
+
+bottomhelper span
+{
+    font-size: 9px;
+    color: #ccc;
+}
+
+information.taked
+{
+    background: #00bfff;
+    border-radius: 6px;
+    padding: 8px;
+    color: #fff;
+    justify-content: center;
+    margin-bottom: 6px;
+    cursor: pointer;
+}
+
+information[savetouser]
+{
+    flex-direction: column;
+}
+
+smilepreview 
+{
+    display: flex;
+    align-content: space-evenly;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
+}
+
+smilepreview sp
+{
+    width: 30px;
+    height: 60px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 4px 20px;
+}
+
+smilepreview sp bgnd
+{
+    width: 30px;
+    height: 30px;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+}
+
+smilepreview sp ttl {
+    font-size: 11px;
+    overflow: hidden;
+}
+
+savetouser middle
+{
+    overflow-y: scroll;
+    max-height: calc(100vh - 100px);
+}
+
+changepassword ifpasschanged,
+staypassword ifpasschanged
+{
+    border-radius: 6px;
+    color: #fff;
+    justify-content: center;
+    margin-bottom: 6px;
+    height: auto;
+    
+    font-size: 11px;
+    
+    transition: all .3s;
+}
+
+changepassword ifpasschanged:not(:empty),
+staypassword ifpasschanged:not(:empty)
+{
+    max-height: 100px;
+    padding: 8px;
+    background: #00bfff;
+}
+
+changepassword ifpasschanged:empty,
+staypassword ifpasschanged:empty
+{
+    max-height: 0px;
+    padding: 0px 8px;
+    background: #121215;
+}
+
+flex[row]
+{
+    flex-direction: row;
+    align-items: center;
+    margin: 4px 0px;
+    padding: 2px 6px;
+    background: #2b2c32;
+    border-radius: 6px;
+}
+
+changepassword label[for],
+staypassword label[for]
+{
+    flex: 1;
+}
+
+changepassword input,
+staypassword input
+{
+    flex: 2;
+    padding: 0px 10px;
+    border-color: #282727!important;
+    background: #121215!important;
 }
