--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -362,3 +362,141 @@ pages[name="colorpicker"] page
     height: 20px!important;
 	filter: invert(93.5%);
 }
+
+#chatBlock ul.chatMessages {
+	position: relative;
+}
+
+#chatBlock ul.chatMessages li {
+	transition: all .3s;
+	opacity: 0;
+	transform: rotateY(25deg);
+	max-height: 1000px;
+	overflow: hidden;
+}
+
+#chatBlock ul.chatMessages li.animate {
+	opacity: 1;
+	transform: rotateY(0deg);
+}
+
+#chatBlock ul.chatMessages li.removeUserMessageAnimation {
+	max-height: 0px;
+	margin: 0px!important;
+	overflow: hidden!important;
+}
+
+.userMenu {
+    position: absolute;
+    height: 42px;
+    margin-left: 55px;
+	background: #383838;
+    padding: 0px 3px;
+	
+    justify-content: center;
+    align-items: center;
+    z-index: 4;
+	font-size: 16px;
+	border-radius: 0 3px 3px 3px;
+	
+	display: none;
+    opacity: 0;
+	transition: all .3s;
+}
+
+.userMenu.active {
+	display: flex;
+	opacity: 1;
+}
+
+.userItem {
+	cursor: pointer;
+	transition: all .3s;
+}
+
+.userItem:hover {
+	background: #414141;
+}
+
+.userItem:hover > * {
+	color: #fff;
+}
+
+.userMenu:before {
+	content: '';
+    background-image: radial-gradient(circle at 0 10px, rgba(204,0,0,0) 9px, #383838 10px);
+    background-size: 10px 10px;
+    background-repeat: no-repeat;
+    width: 10px;
+    height: 10px;
+    top: 0;
+    position: absolute;
+    left: -10px;
+}
+
+.userItem {
+    display: flex;
+	padding: 8px 6px;
+	background: #272727;
+    border: 1px solid #343434;
+	border-radius: 3px;
+}
+
+.userItem:not(:first-child) {
+	margin-left: 6px;
+}
+
+.userLabel {
+    font-size: 12px;
+}
+
+.userMenu .userItem > *:not(:first-child) {
+	margin-left: 6px;
+}
+
+div.reveal {
+    background: linear-gradient(90deg, transparent 0%, #0004 4%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+	
+	opacity: 0;
+	transition: all .3s;
+}
+
+div.reveal.showed {
+	opacity: 1;
+}
+
+ignore-list {
+	margin-top: 6px;
+	flex-direction: column;
+}
+
+ignore-list:empty + .empty {
+	display: flex;
+}
+
+.empty {
+	display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+ignore-list .user-ignored {
+    display: flex;
+	flex: 1;
+    justify-content: space-between;
+    padding: 8px 16px;
+    background: #2b2c32;
+    border-radius: 3px;
+    align-items: center;
+}
+
+ignore-list .user-ignored:not(:first-child) {
+	margin-top: 4px;
+}
